Bug Fix: removed CTA button jumping effect

--- a/styles/base.css
+++ b/styles/base.css
@@ -266,7 +266,8 @@ div a.primary-button {
   background: #000;
   font-size: 18px;
   letter-spacing: 0px;
-  /* border: 4px #fff solid; */
+  border: 4px #000 solid;
+  box-sizing: border-box;
   display: inline-block;
   padding: 10px 20px;
   border-radius: 4px;
